--- a/index.html
+++ b/index.html
@@ -18,51 +18,83 @@
 html{scroll-behavior:smooth;}
 body{background:var(--light);color:var(--dark);}
 
-/* NAVBAR */
-nav{position:fixed;top:0;left:0;width:100%;z-index:1000;
-     background:rgba(255,255,255,.95);backdrop-filter:blur(8px);
-     border-bottom:1px solid #e7e7e7;}
-nav .inner{max-width:1280px;margin:auto;display:flex;
-           align-items:center;justify-content:space-between;
-           padding:1rem 2rem;}
-.logo{font-weight:700;font-size:1.25rem;}
+/* NAVIGATION - SUPER BASIC */
+.header{
+  position:fixed;
+  top:0;
+  width:100%;
+  background:rgba(255,255,255,0.95);
+  backdrop-filter:blur(8px);
+  border-bottom:1px solid #e7e7e7;
+  z-index:1000;
+  padding:1rem 2rem;
+}
 
-/* DESKTOP MENU */
-.nav-menu{display:flex;list-style:none;gap:1.5rem;}
-.nav-menu a{color:var(--dark);text-decoration:none;font-weight:500;position:relative;}
-.nav-menu a::after{content:"";position:absolute;left:0;bottom:-3px;height:2px;width:0;
-             background:var(--accent);transition:.3s;}
-.nav-menu a:hover::after{width:100%;}
+.nav-wrapper{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  max-width:1280px;
+  margin:0 auto;
+}
 
-/* HAMBURGER MENU */
-.hamburger{display:none;flex-direction:column;gap:4px;cursor:pointer;
-           padding:10px;background:none;border:none;}
-.hamburger span{width:25px;height:3px;background:var(--dark);
-                transition:all .3s ease;border-radius:3px;}
+.logo{
+  font-weight:700;
+  font-size:1.25rem;
+  color:var(--dark);
+}
 
-/* HAMBURGER ANIMATION */
-.hamburger.active span:nth-child(1){transform:rotate(45deg) translate(5px, 5px);}
-.hamburger.active span:nth-child(2){opacity:0;}
-.hamburger.active span:nth-child(3){transform:rotate(-45deg) translate(7px, -6px);}
+/* DESKTOP NAVIGATION */
+.desktop-menu{
+  display:flex;
+  list-style:none;
+  gap:2rem;
+}
 
-/* MOBILE MENU */
+.desktop-menu a{
+  color:var(--dark);
+  text-decoration:none;
+  font-weight:500;
+  transition:.3s;
+}
+
+.desktop-menu a:hover{
+  color:var(--accent);
+}
+
+/* MOBILE HAMBURGER BUTTON */
+.mobile-toggle{
+  display:none;
+  background:none;
+  border:2px solid var(--dark);
+  padding:8px 10px;
+  cursor:pointer;
+  font-size:18px;
+  border-radius:4px;
+}
+
+.mobile-toggle:hover{
+  background:var(--accent);
+  border-color:var(--accent);
+  color:white;
+}
+
+/* MOBILE MENU - HIDDEN BY DEFAULT */
 .mobile-menu{
   display:none;
   position:fixed;
-  top:70px;
+  top:80px;
   left:0;
   width:100%;
-  height:calc(100vh - 70px);
   background:white;
+  border-bottom:3px solid var(--accent);
+  box-shadow:0 4px 10px rgba(0,0,0,0.15);
   z-index:999;
-  padding:2rem 0;
-  transform:translateX(-100%);
-  transition:transform 0.3s ease;
 }
 
-.mobile-menu.active{
-  display:block;
-  transform:translateX(0);
+/* MOBILE MENU - VISIBLE WHEN ACTIVE */
+.mobile-menu.show{
+  display:block !important;
 }
 
 .mobile-menu ul{
@@ -75,14 +107,18 @@ nav .inner{max-width:1280px;margin:auto;display:flex;
   border-bottom:1px solid #f0f0f0;
 }
 
+.mobile-menu li:last-child{
+  border-bottom:none;
+}
+
 .mobile-menu a{
   display:block;
-  padding:1.5rem 2rem;
+  padding:15px 30px;
   color:var(--dark);
   text-decoration:none;
-  font-size:1.1rem;
+  font-size:16px;
   font-weight:500;
-  transition:all .3s;
+  transition:.3s;
 }
 
 .mobile-menu a:hover{
@@ -90,10 +126,15 @@ nav .inner{max-width:1280px;margin:auto;display:flex;
   color:white;
 }
 
-/* RESPONSIVE */
-@media(max-width:768px){
-  .nav-menu{display:none;}
-  .hamburger{display:flex;}
+/* RESPONSIVE - SHOW MOBILE ELEMENTS */
+@media (max-width: 768px) {
+  .desktop-menu {
+    display: none !important;
+  }
+  
+  .mobile-toggle {
+    display: block !important;
+  }
 }
 
 /* HERO */
@@ -109,13 +150,11 @@ nav .inner{max-width:1280px;margin:auto;display:flex;
      border:none;border-radius:var(--radius);font-weight:600;cursor:pointer;}
 .btn:hover{background:#e03e00;}
 
-/* STATS */
 .stats{display:flex;flex-wrap:wrap;justify-content:center;gap:2rem;
        background:var(--muted);padding:4rem 2rem;}
 .stat h2{font-size:2.5rem;color:var(--accent);}
 .stat p{opacity:.8;font-weight:500;text-align:center;}
 
-/* SECTIONS */
 section{padding:4rem 2rem;}
 .section-title{font-size:2.25rem;font-weight:700;text-align:center;margin-bottom:1rem;}
 .section-sub{font-size:1rem;color:#606060;text-align:center;margin-bottom:3rem;}
@@ -177,13 +216,13 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
 
 <body>
 
-<!-- NAVBAR -->
-<nav>
-  <div class="inner">
+<!-- HEADER WITH NAVIGATION -->
+<header class="header">
+  <div class="nav-wrapper">
     <div class="logo">Schiatê Media</div>
     
     <!-- DESKTOP MENU -->
-    <ul class="nav-menu">
+    <ul class="desktop-menu">
       <li><a href="#home">Home</a></li>
       <li><a href="#services">Services</a></li>
       <li><a href="#portfolio">Work</a></li>
@@ -192,17 +231,13 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
       <li><a href="#contact">Contact</a></li>
     </ul>
     
-    <!-- HAMBURGER MENU -->
-    <button class="hamburger" id="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
+    <!-- MOBILE HAMBURGER BUTTON -->
+    <button class="mobile-toggle" id="menuBtn">☰</button>
   </div>
-</nav>
+</header>
 
-<!-- MOBILE MENU -->
-<div class="mobile-menu" id="mobileMenu">
+<!-- MOBILE MENU (SEPARATE FROM HEADER) -->
+<div class="mobile-menu" id="mobileNav">
   <ul>
     <li><a href="#home">Home</a></li>
     <li><a href="#services">Services</a></li>
@@ -213,7 +248,7 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </ul>
 </div>
 
-<!-- HERO -->
+<!-- REST OF YOUR CONTENT -->
 <section class="hero" id="home">
   <h1>Helping YouTube Creators Scale With Premium Editing</h1>
   <p>Schiatê Media is a full-service creative partner for the internet's most ambitious voices—turning raw footage into binge-worthy stories that captivate audiences and grow channels.</p>
@@ -222,14 +257,12 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </button>
 </section>
 
-<!-- STATS -->
 <div class="stats">
   <div class="stat"><h2>3.4B+</h2><p>Total Views Generated</p></div>
   <div class="stat"><h2>5M+</h2><p>Subscribers Gained</p></div>
   <div class="stat"><h2>100+</h2><p>Active Creators</p></div>
 </div>
 
-<!-- SERVICES -->
 <section id="services">
   <h2 class="section-title">What We Do</h2>
   <p class="section-sub">End-to-end production so you can stay focused on creating.</p>
@@ -257,7 +290,6 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </div>
 </section>
 
-<!-- PORTFOLIO -->
 <section class="portfolio" id="portfolio">
   <h2 class="section-title" style="color:#fff;">Creator Highlights</h2>
   <p class="section-sub" style="color:#d0d0d0;">Results that speak for themselves.</p>
@@ -281,7 +313,6 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </div>
 </section>
 
-<!-- BOOKING -->
 <section class="booking" id="booking">
   <h2 class="section-title">Book Your 30-Minute Strategy Call</h2>
   <p class="section-sub">Schedule a free consultation to discuss your project needs.</p>
@@ -356,13 +387,11 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </div>
 </section>
 
-<!-- ABOUT -->
 <section class="about" id="about">
   <h2 class="section-title">A Global Collective of Storytellers</h2>
   <p>Founded by creator Anthony Schiatê, our fully remote team of editors, motion designers and channel strategists partner with creators who refuse to be average. We obsess over retention graphs, craft narratives that resonate, and iterate until every frame earns its place.</p>
 </section>
 
-<!-- CONTACT -->
 <section class="contact" id="contact">
   <h2 class="section-title">Let's Create Something Iconic</h2>
   <p class="section-sub">Have questions? Send us a message and we'll reply within 24 hours.</p>
@@ -374,39 +403,46 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </form>
 </section>
 
-<!-- FOOTER -->
 <footer>© 2025 Schiatê Media. All rights reserved.</footer>
 
+<!-- THE SIMPLEST JAVASCRIPT POSSIBLE -->
 <script>
-// MOBILE MENU FUNCTIONALITY - GUARANTEED TO WORK
-const hamburger = document.getElementById('hamburger');
-const mobileMenu = document.getElementById('mobileMenu');
+// Get the elements
+var menuButton = document.getElementById('menuBtn');
+var mobileMenu = document.getElementById('mobileNav');
+var isMenuOpen = false;
 
-// Toggle mobile menu
-hamburger.addEventListener('click', function() {
-  console.log('Hamburger clicked!'); // Debug log
-  hamburger.classList.toggle('active');
-  mobileMenu.classList.toggle('active');
-});
-
-// Close menu when clicking on links
-const mobileLinks = document.querySelectorAll('.mobile-menu a');
-mobileLinks.forEach(link => {
-  link.addEventListener('click', function() {
-    hamburger.classList.remove('active');
-    mobileMenu.classList.remove('active');
-  });
-});
-
-// Close menu when clicking outside
-document.addEventListener('click', function(event) {
-  if (!hamburger.contains(event.target) && !mobileMenu.contains(event.target)) {
-    hamburger.classList.remove('active');
-    mobileMenu.classList.remove('active');
+// When button is clicked
+menuButton.addEventListener('click', function() {
+  console.log('Menu button clicked!'); // Debug message
+  
+  if (isMenuOpen) {
+    // Close menu
+    mobileMenu.classList.remove('show');
+    menuButton.innerHTML = '☰';
+    isMenuOpen = false;
+    console.log('Menu closed');
+  } else {
+    // Open menu
+    mobileMenu.classList.add('show');
+    menuButton.innerHTML = '✕';
+    isMenuOpen = true;
+    console.log('Menu opened');
   }
 });
 
-// BOOKING FUNCTIONALITY
+// Close menu when link is clicked
+var menuLinks = mobileMenu.querySelectorAll('a');
+for (var i = 0; i < menuLinks.length; i++) {
+  menuLinks[i].addEventListener('click', function() {
+    mobileMenu.classList.remove('show');
+    menuButton.innerHTML = '☰';
+    isMenuOpen = false;
+    console.log('Menu closed by link click');
+  });
+}
+
+// Rest of your functions
 let selectedTime = null;
 let selectedPayment = null;
 
@@ -481,7 +517,6 @@ function handleSubmit(e) {
   e.target.reset();
 }
 
-// STATS ANIMATION
 const observer = new IntersectionObserver(entries => {
   entries.forEach(entry => {
     if(entry.isIntersecting){
