--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 html{scroll-behavior:smooth;}
 body{background:var(--light);color:var(--dark);}
 
-/* NAVIGATION - SUPER BASIC */
+/* NAVIGATION - ULTRA SIMPLE */
 .header{
   position:fixed;
   top:0;
@@ -62,78 +62,74 @@ body{background:var(--light);color:var(--dark);}
   color:var(--accent);
 }
 
-/* MOBILE HAMBURGER BUTTON */
-.mobile-toggle{
+/* MOBILE HAMBURGER - VISIBLE BUTTON */
+.hamburger-btn{
   display:none;
-  background:none;
-  border:2px solid var(--dark);
-  padding:8px 10px;
+  background:var(--accent);
+  color:white;
+  border:none;
+  padding:10px 15px;
   cursor:pointer;
   font-size:18px;
-  border-radius:4px;
+  border-radius:5px;
+  font-weight:bold;
 }
 
-.mobile-toggle:hover{
-  background:var(--accent);
-  border-color:var(--accent);
-  color:white;
+.hamburger-btn:hover{
+  background:#e03e00;
 }
 
-/* MOBILE MENU - HIDDEN BY DEFAULT */
-.mobile-menu{
+/* MOBILE MENU - SIMPLE DROPDOWN */
+.mobile-dropdown{
   display:none;
   position:fixed;
-  top:80px;
+  top:70px;
   left:0;
   width:100%;
   background:white;
   border-bottom:3px solid var(--accent);
-  box-shadow:0 4px 10px rgba(0,0,0,0.15);
+  box-shadow:0 5px 15px rgba(0,0,0,0.2);
   z-index:999;
 }
 
-/* MOBILE MENU - VISIBLE WHEN ACTIVE */
-.mobile-menu.show{
-  display:block !important;
-}
-
-.mobile-menu ul{
+.mobile-dropdown ul{
   list-style:none;
-  padding:0;
+  padding:20px 0;
   margin:0;
 }
 
-.mobile-menu li{
+.mobile-dropdown li{
+  text-align:center;
   border-bottom:1px solid #f0f0f0;
 }
 
-.mobile-menu li:last-child{
+.mobile-dropdown li:last-child{
   border-bottom:none;
 }
 
-.mobile-menu a{
+.mobile-dropdown a{
   display:block;
-  padding:15px 30px;
+  padding:15px 20px;
   color:var(--dark);
   text-decoration:none;
-  font-size:16px;
-  font-weight:500;
+  font-size:18px;
+  font-weight:600;
   transition:.3s;
 }
 
-.mobile-menu a:hover{
+.mobile-dropdown a:hover{
   background:var(--accent);
   color:white;
 }
 
-/* RESPONSIVE - SHOW MOBILE ELEMENTS */
+/* RESPONSIVE */
 @media (max-width: 768px) {
   .desktop-menu {
-    display: none !important;
+    display: none;
   }
   
-  .mobile-toggle {
-    display: block !important;
+  .hamburger-btn {
+    display: block;
   }
 }
 
@@ -150,11 +146,13 @@ body{background:var(--light);color:var(--dark);}
      border:none;border-radius:var(--radius);font-weight:600;cursor:pointer;}
 .btn:hover{background:#e03e00;}
 
+/* STATS */
 .stats{display:flex;flex-wrap:wrap;justify-content:center;gap:2rem;
        background:var(--muted);padding:4rem 2rem;}
 .stat h2{font-size:2.5rem;color:var(--accent);}
 .stat p{opacity:.8;font-weight:500;text-align:center;}
 
+/* SECTIONS */
 section{padding:4rem 2rem;}
 .section-title{font-size:2.25rem;font-weight:700;text-align:center;margin-bottom:1rem;}
 .section-sub{font-size:1rem;color:#606060;text-align:center;margin-bottom:3rem;}
@@ -165,6 +163,7 @@ section{padding:4rem 2rem;}
 .card h3{margin-bottom:.5rem;}
 .card p{font-size:.95rem;line-height:1.45;}
 
+/* PORTFOLIO */
 .portfolio{background:var(--dark);color:var(--light);}
 .project-text{background:rgba(255,255,255,0.1);padding:2rem;border-radius:var(--radius);
               text-align:center;transition:transform .3s;}
@@ -172,6 +171,45 @@ section{padding:4rem 2rem;}
 .project-text h4{color:var(--light);font-size:1.3rem;font-weight:600;margin-bottom:1rem;}
 .project-text p{color:#d0d0d0;font-size:.95rem;line-height:1.5;}
 
+/* TESTIMONIALS SECTION */
+.testimonials{background:var(--light);padding:4rem 2rem;}
+.testimonial-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(350px,1fr));gap:2rem;margin-top:2rem;}
+.testimonial-card{
+  background:white;
+  padding:2rem;
+  border-radius:var(--radius);
+  box-shadow:0 5px 20px rgba(0,0,0,0.1);
+  border-left:4px solid var(--accent);
+  transition:transform .3s;
+}
+.testimonial-card:hover{transform:translateY(-5px);}
+.testimonial-content{
+  font-size:1rem;
+  line-height:1.6;
+  color:#444;
+  margin-bottom:1.5rem;
+  font-style:italic;
+}
+.testimonial-content::before{content:'"';font-size:2rem;color:var(--accent);line-height:1;}
+.testimonial-content::after{content:'"';font-size:2rem;color:var(--accent);line-height:1;}
+.testimonial-author{display:flex;align-items:center;gap:1rem;}
+.author-avatar{
+  width:50px;
+  height:50px;
+  border-radius:50%;
+  background:linear-gradient(135deg,var(--accent),#ff6b35);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:white;
+  font-weight:bold;
+  font-size:1.2rem;
+}
+.author-info h4{font-size:1rem;font-weight:600;margin-bottom:.3rem;}
+.author-info p{font-size:.85rem;color:#666;}
+.rating{color:#ffd700;font-size:1.2rem;margin-bottom:.5rem;}
+
+/* BOOKING SECTION */
 .booking{background:var(--muted);padding:4rem 2rem;}
 .booking-form{max-width:600px;margin:auto;background:white;padding:2rem;
               border-radius:var(--radius);box-shadow:0 4px 15px rgba(0,0,0,0.1);}
@@ -210,6 +248,7 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   .hero h1{font-size:2.2rem;}
   .time-slots{grid-template-columns:repeat(2,1fr);}
   .payment-methods{flex-direction:column;}
+  .testimonial-grid{grid-template-columns:1fr;}
 }
 </style>
 </head>
@@ -226,29 +265,31 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
       <li><a href="#home">Home</a></li>
       <li><a href="#services">Services</a></li>
       <li><a href="#portfolio">Work</a></li>
+      <li><a href="#testimonials">Reviews</a></li>
       <li><a href="#booking">Book Meeting</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
     
     <!-- MOBILE HAMBURGER BUTTON -->
-    <button class="mobile-toggle" id="menuBtn">☰</button>
+    <button class="hamburger-btn" onclick="showMobileMenu()">MENU</button>
   </div>
 </header>
 
-<!-- MOBILE MENU (SEPARATE FROM HEADER) -->
-<div class="mobile-menu" id="mobileNav">
+<!-- MOBILE MENU DROPDOWN -->
+<div class="mobile-dropdown" id="mobileMenu">
   <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#services">Services</a></li>
-    <li><a href="#portfolio">Work</a></li>
-    <li><a href="#booking">Book Meeting</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#home" onclick="hideMobileMenu()">Home</a></li>
+    <li><a href="#services" onclick="hideMobileMenu()">Services</a></li>
+    <li><a href="#portfolio" onclick="hideMobileMenu()">Work</a></li>
+    <li><a href="#testimonials" onclick="hideMobileMenu()">Reviews</a></li>
+    <li><a href="#booking" onclick="hideMobileMenu()">Book Meeting</a></li>
+    <li><a href="#about" onclick="hideMobileMenu()">About</a></li>
+    <li><a href="#contact" onclick="hideMobileMenu()">Contact</a></li>
   </ul>
 </div>
 
-<!-- REST OF YOUR CONTENT -->
+<!-- HERO SECTION -->
 <section class="hero" id="home">
   <h1>Helping YouTube Creators Scale With Premium Editing</h1>
   <p>Schiatê Media is a full-service creative partner for the internet's most ambitious voices—turning raw footage into binge-worthy stories that captivate audiences and grow channels.</p>
@@ -257,12 +298,14 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </button>
 </section>
 
+<!-- STATS -->
 <div class="stats">
   <div class="stat"><h2>3.4B+</h2><p>Total Views Generated</p></div>
   <div class="stat"><h2>5M+</h2><p>Subscribers Gained</p></div>
   <div class="stat"><h2>100+</h2><p>Active Creators</p></div>
 </div>
 
+<!-- SERVICES -->
 <section id="services">
   <h2 class="section-title">What We Do</h2>
   <p class="section-sub">End-to-end production so you can stay focused on creating.</p>
@@ -290,6 +333,7 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </div>
 </section>
 
+<!-- PORTFOLIO -->
 <section class="portfolio" id="portfolio">
   <h2 class="section-title" style="color:#fff;">Creator Highlights</h2>
   <p class="section-sub" style="color:#d0d0d0;">Results that speak for themselves.</p>
@@ -313,9 +357,103 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </div>
 </section>
 
+<!-- CLIENT TESTIMONIALS SECTION -->
+<section class="testimonials" id="testimonials">
+  <h2 class="section-title">What Our Clients Say</h2>
+  <p class="section-sub">Real feedback from creators who've transformed their channels with our help.</p>
+  
+  <div class="testimonial-grid">
+    <div class="testimonial-card">
+      <div class="rating">★★★★★</div>
+      <div class="testimonial-content">
+        Working with Schiatê Media completely changed my content game. My retention rates increased by 65% and I gained 200K subscribers in just 6 months. Their editing style perfectly captures my brand voice.
+      </div>
+      <div class="testimonial-author">
+        <div class="author-avatar">MK</div>
+        <div class="author-info">
+          <h4>Marcus Johnson</h4>
+          <p>Tech Reviewer • 850K Subscribers</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial-card">
+      <div class="rating">★★★★★</div>
+      <div class="testimonial-content">
+        I was struggling with video editing for months. Schiatê Media took over and now my videos look like they're from a major network. The thumbnails alone increased my CTR by 40%. Worth every penny.
+      </div>
+      <div class="testimonial-author">
+        <div class="author-avatar">SP</div>
+        <div class="author-info">
+          <h4>Sarah Peterson</h4>
+          <p>Lifestyle Vlogger • 1.2M Subscribers</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial-card">
+      <div class="rating">★★★★★</div>
+      <div class="testimonial-content">
+        The team at Schiatê Media doesn't just edit videos, they craft stories. My audience engagement is through the roof and I've finally hit that coveted 100K milestone thanks to their expertise.
+      </div>
+      <div class="testimonial-author">
+        <div class="author-avatar">DR</div>
+        <div class="author-info">
+          <h4>David Rodriguez</h4>
+          <p>Gaming Creator • 450K Subscribers</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial-card">
+      <div class="rating">★★★★★</div>
+      <div class="testimonial-content">
+        Professional, reliable, and incredibly talented. They transformed my raw footage into viral content that's generated over 50M views. I can finally focus on creating while they handle the magic behind the scenes.
+      </div>
+      <div class="testimonial-author">
+        <div class="author-avatar">AL</div>
+        <div class="author-info">
+          <h4>Amanda Liu</h4>
+          <p>Educational Content • 680K Subscribers</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial-card">
+      <div class="rating">★★★★★</div>
+      <div class="testimonial-content">
+        Best investment I've made for my channel. Their short-form content strategy helped me explode on TikTok and YouTube Shorts. I went from 50K to 500K followers in 8 months. Absolutely incredible results.
+      </div>
+      <div class="testimonial-author">
+        <div class="author-avatar">TM</div>
+        <div class="author-info">
+          <h4>Tyler Martinez</h4>
+          <p>Comedy Creator • 750K Subscribers</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial-card">
+      <div class="rating">★★★★★</div>
+      <div class="testimonial-content">
+        Their podcast editing is next level. We went from 1,000 downloads per episode to 25,000+ in just 4 months. The highlight reels they create from our episodes regularly go viral on social media.
+      </div>
+      <div class="testimonial-author">
+        <div class="author-avatar">JW</div>
+        <div class="author-info">
+          <h4>Jessica Williams</h4>
+          <p>Podcast Host • "Marketing Mastery"</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- BOOKING SECTION -->
 <section class="booking" id="booking">
   <h2 class="section-title">Book Your 30-Minute Strategy Call</h2>
   <p class="section-sub">Schedule a free consultation to discuss your project needs.</p>
+  
   <div class="booking-form">
     <form onsubmit="handleBooking(event)" id="bookingForm">
       <div class="form-group">
@@ -387,11 +525,13 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </div>
 </section>
 
+<!-- ABOUT -->
 <section class="about" id="about">
   <h2 class="section-title">A Global Collective of Storytellers</h2>
   <p>Founded by creator Anthony Schiatê, our fully remote team of editors, motion designers and channel strategists partner with creators who refuse to be average. We obsess over retention graphs, craft narratives that resonate, and iterate until every frame earns its place.</p>
 </section>
 
+<!-- CONTACT -->
 <section class="contact" id="contact">
   <h2 class="section-title">Let's Create Something Iconic</h2>
   <p class="section-sub">Have questions? Send us a message and we'll reply within 24 hours.</p>
@@ -403,46 +543,33 @@ footer{background:var(--dark);color:var(--light);text-align:center;padding:2rem 
   </form>
 </section>
 
+<!-- FOOTER -->
 <footer>© 2025 Schiatê Media. All rights reserved.</footer>
 
-<!-- THE SIMPLEST JAVASCRIPT POSSIBLE -->
+<!-- BULLETPROOF JAVASCRIPT -->
 <script>
-// Get the elements
-var menuButton = document.getElementById('menuBtn');
-var mobileMenu = document.getElementById('mobileNav');
-var isMenuOpen = false;
+// MOBILE MENU - ABSOLUTE SIMPLEST APPROACH
+function showMobileMenu() {
+  console.log('Show menu clicked');
+  document.getElementById('mobileMenu').style.display = 'block';
+}
 
-// When button is clicked
-menuButton.addEventListener('click', function() {
-  console.log('Menu button clicked!'); // Debug message
+function hideMobileMenu() {
+  console.log('Hide menu clicked');
+  document.getElementById('mobileMenu').style.display = 'none';
+}
+
+// Close menu when clicking outside
+document.addEventListener('click', function(event) {
+  var menu = document.getElementById('mobileMenu');
+  var button = document.querySelector('.hamburger-btn');
   
-  if (isMenuOpen) {
-    // Close menu
-    mobileMenu.classList.remove('show');
-    menuButton.innerHTML = '☰';
-    isMenuOpen = false;
-    console.log('Menu closed');
-  } else {
-    // Open menu
-    mobileMenu.classList.add('show');
-    menuButton.innerHTML = '✕';
-    isMenuOpen = true;
-    console.log('Menu opened');
+  if (!menu.contains(event.target) && !button.contains(event.target)) {
+    menu.style.display = 'none';
   }
 });
 
-// Close menu when link is clicked
-var menuLinks = mobileMenu.querySelectorAll('a');
-for (var i = 0; i < menuLinks.length; i++) {
-  menuLinks[i].addEventListener('click', function() {
-    mobileMenu.classList.remove('show');
-    menuButton.innerHTML = '☰';
-    isMenuOpen = false;
-    console.log('Menu closed by link click');
-  });
-}
-
-// Rest of your functions
+// REST OF YOUR FUNCTIONS
 let selectedTime = null;
 let selectedPayment = null;
 
@@ -517,6 +644,7 @@ function handleSubmit(e) {
   e.target.reset();
 }
 
+// STATS ANIMATION
 const observer = new IntersectionObserver(entries => {
   entries.forEach(entry => {
     if(entry.isIntersecting){
